# oven-vision

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  calibration-points.json  test.sh
.github/workflows/: release.yml
.grepai/: symbols.gob
benches/: stages.rs
config/: calibration.example.yaml
docs/: per-knob-calibration.md
spike/: validate_dials.py
src/: annotate.rs  bench_rayon.rs  capture.rs  capture_store.rs  config.rs  debug_server.rs  detect.rs  led.rs  lib.rs  main.rs  mqtt.rs  preprocess.rs  types.rs
src/pipeline/: cache.rs  extract_band.rs  final_check.rs  final_detect.rs  find_clock.rs  find_corner.rs  find_features.rs  find_lines.rs  find_stove.rs  find_verticals.rs  mod.rs  perspective.rs  refine_warp.rs  sanity.rs  stage.rs  testdata.rs  util.rs  warp_check.rs
src/stage/: angle.rs  annotate.rs  detect.rs  enhance.rs  mod.rs  reproject.rs  sanity.rs  undistort.rs  warp.rs
tests/: detect_test.rs  led_test.rs
tests/fixtures/: README
