[package]
name = "oven-vision"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = { version = "0.98", default-features = false, features = ["imgcodecs", "imgproc"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rumqttc = "0.24"
axum = "0.8"
rayon = "1"
tokio-stream = "0.1"
async-stream = "0.3"

[[bin]]
name = "oven-vision"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
