[package]
name = "oven-vision"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = { version = "0.98", default-features = false, features = ["imgcodecs", "imgproc", "calib3d"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"

[[bin]]
name = "oven-vision"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "z"
